# RD-WATCH

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  INGESTION.md  MANIFEST.in  Procfile  RD_WATCH_native_dev_windows.md  README.md  docker-compose.demo.yml  docker-compose.override.no-build.yml  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  fuse.sh  index.html  manage.py  mkdocs.yml  pyproject.toml  rdwatch_cli-0.0.5-py3-none-any.whl  rdwatch_cli-0.0.6-py3-none-any.whl  requirements.txt  rgd_watch_client-0.0.1-py3-none-any.whl  setup.py  sitemap.xml  template.env  tox.ini  version.py  vscode.code-workspace
cli/: .flake8  pyproject.toml
cli/src/rdwatch_cli/: __init__.py  config.py  exceptions.py  image.py  login.py  movie.py  utils.py  validators.py
cli/src/rdwatch_cli/api/: __init__.py  image.py  movie.py
django/: celerybeat-schedule.db  pyproject.toml  tox.ini
django/src/: manage.py
django/src/rdwatch/: __init__.py  admin.py  allauth.py  api.py  apps.py  celery.py  urls.py  validators.py
django/src/rdwatch/dataclasses/: __init__.py  crop_parse.py  server_status.py
django/src/rdwatch/db/: functions.py
django/src/rdwatch/fixtures/: lookups.json  testdata.json.xz
django/src/rdwatch/management/commands/: ingest.py
django/src/rdwatch/middleware/: __init__.py
django/src/rdwatch/migrations/: 0001_extensions.py  0001_initial.py  0002_constraints.py  0002_initial.py  0003_delete_satelliteimage.py  0003_saliencytile_range_constraint.py  0003_siteevaluation_status.py  0004_alter_site_label.py  0004_remove_siteobservation_uniq_siteobv_and_more.py  0005_hyperparameters_title.py  0006_alter_siteobservation_label_and_more.py  0006_siteimage_siteimage_rdwatch_sit_timesta_808546_gist.py  0006_siteobservation_video.py  0007_alter_siteimage_siteeval_alter_siteimage_siteobs.py  0007_siteimage_percent_black_retrieving_and_more.py  0007_siteimage_percent_black_satellitefetching.py  0009_hyperparameters_created_and_more.py  0009_hyperparameters_evaluation_and_more.py  0010_siteimage_aws_location_siteimage_image_bbox_and_more.py  0010_siteimage_image_bbox_siteimage_image_dimensions.py  0011_satellitefetching_configuration_and_more.py  0011_siteimage_aws_location_siteimage_image_bbox_and_more.py  0012_alter_siteobservation_timestamp.py  0012_hyperparameters_ground_truth_and_more.py  0012_satellitefetching_configuration.py  0013_hyperparameters_proposal_siteevaluation_end_date_and_more.py  0014_remove_region_uniq_region_and_more.py  0015_modelrun.py  0021_rename_siteobs_siteimage_observation.py  0023_siteevaluation_modified_timestamp.py  0025_siteimage_image_embedding.py  0026_remove_siteevaluation_region_modelrun_region.py  0027_remove_siteevaluation_region_alter_modelrun_region.py  0028_remove_siteevaluation_region_alter_modelrun_region.py  0029_satellitefetching_rdwatch_sat_status_753c74_idx.py  0030_rename_slug_performer_short_code_and_more.py
django/src/rdwatch/models/: __init__.py  annotation_exports.py  ground_truth.py  hyper_parameters.py  lookups.py  model_run.py  performer.py  prediction_configuration.py  region.py  retrieving.py  saliency.py  saliency_tile.py  satellite_fetching.py  satellite_image.py  site.py  site_characterization.py  site_evaluation.py  site_image.py  site_observation.py  tracking_configuration.py
django/src/rdwatch/redis/: __init__.py
django/src/rdwatch/schemas/: __init__.py  common.py  region_model.py  site_evaluation.py  site_model.py  site_observation.py
django/src/rdwatch/serializers/: __init__.py  generics.py  hyper_parameters.py  performer.py  region.py  server_status.py  site.py  site_characterization.py  site_evaluation.py  site_image.py  site_observation.py
django/src/rdwatch/server/: __init__.py  settings.py  urls.py
django/src/rdwatch/tasks/: __init__.py
django/src/rdwatch/tests/: conftest.py  test_ingest.py  test_model_runs.py  test_site.py  test_site_image.py  test_vector_tiles.py
django/src/rdwatch/utils/: images.py  raster_tile.py  satellite_bands.py  smartflow.py  stac_search.py  tools.py
django/src/rdwatch/views/: __init__.py  model_run.py  performer.py  region.py  saliency_tile.py  satellite_fetching.py  satellite_image.py  server_status.py  site.py  site_characterization.py  site_characterization_tile.py  site_evaluation.py  site_image.py  site_model.py  site_observation.py  site_observation_tile.py  site_tile.py  tile.py  vector_tile.py
django/src/rdwatch_scoring/: api.py  apps.py  models.py  models_file.py  router.py  urls.py  views.py
django/src/rdwatch_scoring/migrations/: 0001_initial.py  0002_satellitefetching_siteimage_and_more.py  0003_satellitefetching_model_run_uuid.py  0003_siteimage_image_embedding.py  0004_satellitefetching_rdwatch_sco_status_81a06c_idx.py
django/src/rdwatch_scoring/models/: __init__.py  annotation_exports.py  annotation_ground_truth_observation.py  annotation_ground_truth_site.py  annotation_proposal_observation.py  annotation_proposal_set.py  annotation_proposal_site.py  annotation_proposal_site_log.py  evaluation_activity_classification_matrix.py  evaluation_activity_classification_phase.py  evaluation_activity_classification_temporal_iou.py  evaluation_activity_prediction_temporal_error.py  evaluation_broad_area_search_detection.py  evaluation_broad_area_search_metric.py  evaluation_broad_area_search_proposal.py  evaluation_run.py  hyper_parameters.py  lookups.py  observation.py  observation_comparison.py  performer.py  region.py  satellite_fetching.py  site.py  site_evaluation.py  site_image.py  site_observation.py
django/src/rdwatch_scoring/tasks/: __init__.py
django/src/rdwatch_scoring/views/: __init__.py  eval.py  model_run.py  observation.py  performer.py  proposal.py  region.py  satellite_fetching.py  scores.py  scoring.py  site.py  site_evaluation.py  site_image.py  site_observation.py  vector_tile.py
django/src/rdwatch_smartflow/: api.py  utils.py  views.py
django/src/vector_tiles/: manage.py  settings.py  urls.py  views.py  wsgi.py
(+499 files in other folders)
