[build-system]
requires = [ "poetry-core>=1.6.1" ]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "rdwatch"
version = "0.0.0dev0"
description = "A Django-based web application to support the Kitware WATCH project."
license = "Apache-2.0"
authors = [ "Kitware, Inc. <kitware@kitware.com>" ]
readme = "README.md"
homepage = "https://watch.resonantgeodata.com"
repository = "https://github.com/ResonantGeoData/RD-WATCH/django"
keywords = [ "django", "geospatial", "machine learning" ]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django :: 4.0",
  "Framework :: Django",
]
packages = [
  { include = "rdwatch", from = "src" },
  { include = "rdwatch_scoring", from = "src"},
]

[tool.poetry.dependencies]
python = "~3.11.0"
django = ">=4.1,<4.2"
psycopg2 = "~2.9.3"
redis = { version = "~4.3.4", extras = [ "hiredis" ] }
uritemplate = "^4.1.1"
iso3166 = "^2.1.1"
rio-tiler = "5.0.3"
mercantile = "^1.2.1"
django-ninja = "^0.21.0"
celery = "^5.2.7"
django-extensions = "^3.2.1"
pillow = "^9.5.0"
django-configurations = {extras = ["database", "email"], version = "^2.4.1"}
django-storages = {extras = ["boto3"], version = "^1.13.2"}
django-celery-results = "^2.5.1"
pystac-client = "^0.7.5"
geojson = "^3.0.1"
shapely = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
django-stubs = "^4.2.0"
djangorestframework-stubs = "^3.14.0"
isort = "^5.12.0"
mypy = "^1.3.0"
taskipy = "^1.10.4"
flake8 = "^6.0.0"
flake8-django = "^1.2"
pre-commit = "^3.3.1"
tox = "^4.5.1"
django-minio-storage = "^0.5.2"
werkzeug = "^2.3.7"
django-debug-toolbar = "^4.2.0"

[tool.taskipy.tasks]
"build:openapi" = "DJANGO_SETTINGS_MODULE=rdwatch.server.settings django-admin generateschema --format openapi-json --file openapi.json"
"lint" = "task lint:black; task lint:isort; task lint:flake8"
"lint:fix" = "task lint:black:fix; task lint:isort:fix; task lint:flake8"
"lint:flake8" = "flake8 src"
"lint:black" = "black --check --diff --quiet src"
"lint:black:fix" = "black  --quiet src"
"lint:isort" = "isort --check --diff src"
"lint:isort:fix" = "isort src"
"lint:mypy" = "mypy src"
"test" = "tox"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
known_first_party = ["rdwatch"]
known_django=["django", "rest_framework"]
sections=["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]


[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]


[[tool.mypy.overrides]]
module = [
  "mercantile"
]
ignore_missing_imports = true


[tool.django-stubs]
django_settings_module = "rdwatch.server.settings"


[tool.flake8]
extend_exclude = [".venv"]
extend_ignore = [
  # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html?highlight=flake8#flake8
  "E203",
]
max_line_length = 88
